--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Autos, lujo, compra, bmw, Aston Martin, Merdecez benz">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="./media/logo.png">
+    <link rel="icon" href="./assets/logo.png">
     <title>Contacto</title>
 </head>
 
