--- a/Bmw.html
+++ b/Bmw.html
@@ -48,7 +48,7 @@
 
     <div class="inicio">
         <h2>BMW</h2>
-        <img class="logo_bmw" src="../assets/LogoBmw.png" alt="LogoBmw">
+        <img class="logo_bmw" src="./assets/LogoBmw.png" alt="LogoBmw">
        
     </div>
 
